# rise-aft-can

./: .gitignore  README.md  aft200-d80.py  healthcheck.py  pyproject.toml  requirements.txt  test.py
example/: 1_aft200_d80_basic.py  2_aft200_d80_manual.py  3_aft200_d80_advanced.py  4_aft200_d80_raw_byte.py  aft200_d80_advanced.py  aft200_d80_basic.py
rise_aft_can/: cli.py  imu_test.py  sensors.py  utils.py
